<resources>
    <string name="app_name">MySchoolReminder</string>
    <string name="title_main_activity">ReminderActivity</string>

    <string name="bottom_navigation_menu_calendar">Calendrier</string>
    <string name="bottom_navigation_menu_reminder">Rappels</string>
    <string name="bottom_navigation_menu_countdown">Compte à rebours</string>
    <string name="addEvent">Ajouter un événement</string>
    <string name="title">Titre</string>
    <string name="place">Lieu</string>
    <string name="description">Description</string>
    <string name="schedule">Horaire</string>
    <string name="startDate">Date de début</string>
    <string name="endDate">Date de fin</string>
    <string name="startTime">Heure de début</string>
    <string name="endTime">Heure de fin</string>
    <string name="repetition">Répétition</string>
    <string name="addSchedule">Ajouter un horaire</string>
    <string name="frequency">Fréquence</string>
    <string name="none">Aucune</string>
    <string name="amountOfRepetitions">Nombre de répétitions</string>
    <string name="limitDate">Date limite</string>
    <string name="limite">Limite</string>
    <string name="repeatDuringHolidays">Répéter durant les vacances</string>
    <string name="btn_add">+</string>
    <string name="eventTypeTitle">Ajout d\'un élément</string>
    <string name="trip">Voyage</string>
    <string name="holidays">Vacances</string>
    <string name="Class">Cours</string>
    <string name="homework">Devoir</string>
    <string name="reminder">Rappel</string>
    <string name="event">Événement</string>
    <string name="add">Ajouter</string>
    <string name="btn_remove">-</string>
    <string name="error_message">Merci de remplir les champs avec des valeurs valides</string>
    <string name="countdown_no_holidays">Vous n\'avez pas de vacances enregistrées</string>

</resources>
