<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myschoolreminder.ui.calendar.CalendarFragment"
        android:label="@string/bottom_navigation_menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myschoolreminder.ui.reminder.ReminderFragment"
        android:label="@string/bottom_navigation_menu_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myschoolreminder.ui.countdown.CountdownFragment"
        android:label="@string/bottom_navigation_menu_countdown"
        tools:layout="@layout/fragment_countdown" />
</navigation>